Print out an android location_df as well
This is going to be removed soon, but let's check in the final changes for the record

--- a/calibration_templates/Validate_calibration_during_tests.ipynb
+++ b/calibration_templates/Validate_calibration_during_tests.ipynb
@@ -736,6 +736,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "eval_transitions[\"android\"][\"ucb-sdb-android-4\"][\"calibration_ranges\"][0][\"location_df\"].hr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "test_loc_df = eval_transitions[\"ios\"][\"ucb-sdb-ios-2\"][\"calibration_ranges\"][0][\"location_df\"]; test_loc_df.head()"
    ]
   },
@@ -845,6 +854,13 @@
     "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)\n",
     "evaluation_maps"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
