Enhance the validation template to work for both completed and ongoing tests
Basically, depending on whether we have an odd or even number of transitions,
create the final dummy range or not

- Also display per-phone battery drain curves

--- a/calibration_templates/Validate_calibration_after_tests.ipynb
+++ b/calibration_templates/Validate_calibration_after_tests.ipynb
@@ -265,7 +265,7 @@
    "outputs": [],
    "source": [
     "ios_1_transitions = eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"]\n",
-    "[(t[\"transition\"], arrow.get(t[\"ts\"])) for t in ios_1_transitions]"
+    "[(t[\"transition\"], t[\"trip_id\"], arrow.get(t[\"ts\"]).to(\"America/Los_angeles\")) for t in ios_1_transitions]"
    ]
   },
   {
@@ -276,10 +276,15 @@
    "source": [
     "# We expect that transitions occur in pairs\n",
     "def transitions_to_ranges(transition_list):\n",
-    "    if len(transition_list) % 2 != 0:\n",
-    "        print(\"Transitions occur in pairs, so count (%d) cannot be odd, returning empty list\" % len(transition_list))\n",
-    "        return []\n",
-    "    start_transitions = transition_list[::2]\n",
+    "    # if len(transition_list) % 2 != 0:\n",
+    "    #     print(\"Transitions occur in pairs, so count (%d) cannot be odd, returning empty list\" % len(transition_list))\n",
+    "    #     return []\n",
+    "    if len(transition_list) % 2 == 0:\n",
+    "        print(\"All calibration is complete, going to the end of the list\")\n",
+    "        start_transitions = transition_list[::2]\n",
+    "    else:\n",
+    "        print(\"Ongoing calibration, ignoring last element\")\n",
+    "        start_transitions = transition_list[:-1:2]\n",
     "    end_transitions = transition_list[1::2]\n",
     "    range_list = []\n",
     "    for (s, e) in zip(start_transitions, end_transitions):\n",
@@ -292,6 +297,18 @@
     "            assert s[f] == e[f], \"Field %s mismatch! %s != %s\" % (f, s[f], e[f])\n",
     "        curr_range = {\"trip_id\": s[\"trip_id\"], \"start_ts\": s[\"ts\"], \"end_ts\": e[\"ts\"], \"duration\": (e[\"ts\"] - s[\"ts\"])}\n",
     "        range_list.append(curr_range)\n",
+    "    \n",
+    "    \n",
+    "    if len(transition_list) % 2 == 1:\n",
+    "        s = transition_list[-1]\n",
+    "        curr_ts = arrow.get().timestamp\n",
+    "        print(\"Adding range for ongoing transition\")\n",
+    "        assert s[\"transition\"] == \"START_CALIBRATION_PERIOD\" or s[\"transition\"] == 0, \"Start transition has %s transition\" % s[\"transition\"]\n",
+    "        assert s[\"trip_id\"] == CURR_TRIP_ID, \"Last start transition is for %s, expected %s\" % (s[\"trip_id\"], CURR_TRIP_ID)\n",
+    "        assert curr_ts > s[\"ts\"], \"end %s is before start %s\" % (arrow.get(e[\"ts\"]), arrow.get(s[\"ts\"]))\n",
+    "        curr_range = {\"trip_id\": s[\"trip_id\"], \"start_ts\": s[\"ts\"], \"end_ts\": curr_ts, \"duration\": (curr_ts - s[\"ts\"])}\n",
+    "        range_list.append(curr_range)\n",
+    "\n",
     "    return range_list"
    ]
   },
@@ -412,7 +429,8 @@
     "        # assert unique_test_ids == spec_test_ids, \"Missing calibration test while comparing %s, %s\" % (unique_test_ids, spec_test_ids)\n",
     "        for r in curr_calibration_ranges:\n",
     "            config_during_test_entries = retrieve_data_from_server(phone_label, [\"config/sensor_config\"], r[\"start_ts\"], r[\"end_ts\"])\n",
-    "            assert len(config_during_test_entries) == 1, \"Out of band configuration? Found %d config changes\" % len(config_during_test_entries)\n",
+    "            print(\"%s -> %s\" % (r[\"trip_id\"], [c[\"data\"][\"accuracy\"] for c in config_during_test_entries]))\n",
+    "            # assert len(config_during_test_entries) == 1, \"Out of band configuration? Found %d config changes\" % len(config_during_test_entries)\n",
     "            config_during_test = config_during_test_entries[0][\"data\"]\n",
     "            expected_config = expected_config_map[r[\"trip_id\"]]\n",
     "            # print(config_during_test, expected_config)\n",
@@ -474,10 +492,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duration_df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Since these are not statistical samples, the regular standard deviation/variation don't have much meaning. The variation is really caused by human control of the evaluation start/stop and the durations should be within a few minutes of each other. The expected variation defined in `MAX_DURATION_VARIATION`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "duration_df[CURR_TRIP_ID]"
    ]
   },
   {
@@ -496,7 +532,7 @@
    "outputs": [],
    "source": [
     "assert duration_variation.abs().max() < MAX_DURATION_VARIATION,\\\n",
-    "    \"INVALID: duration_variation.abs().max() > threshold\" % (duration_variation.abs().max(), MAX_DURATION_VARIATION)"
+    "    \"INVALID: duration_variation.abs().max() %d > threshold %d\" % (duration_variation.abs().max(), MAX_DURATION_VARIATION)"
    ]
   },
   {
@@ -568,7 +604,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_battery_df = eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_ranges\"][0][\"battery_df\"]; test_battery_df"
+    "test_battery_df = eval_transitions[\"android\"][\"ucb-sdb-android-2\"][\"calibration_ranges\"][2][\"battery_df\"]; test_battery_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_battery_df = eval_transitions[\"android\"][\"ucb-sdb-android-1\"][\"calibration_ranges\"][2][\"battery_df\"]; test_battery_df"
    ]
   },
   {
@@ -588,13 +633,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=2, nrows=1, figsize=(16,6))\n",
+    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,16))\n",
     "\n",
     "plot_calibration_curves(ios_ax, eval_transitions[\"ios\"])\n",
     "plot_calibration_curves(android_ax, eval_transitions[\"android\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_separate_calibration_curves(fig, nRows, phone_map):\n",
+    "    for i, phone_label in enumerate(phone_map.keys()):\n",
+    "        ax = fig.add_subplot(nRows, 2, i+1)\n",
+    "        curr_calibration_ranges = phone_map[phone_label][\"calibration_ranges\"]\n",
+    "        for r in curr_calibration_ranges:\n",
+    "            battery_df = r[\"battery_df\"]\n",
+    "            ret_axes = battery_df.plot(x=\"hr\", y=\"battery_level_pct\", ax=ax, label=r[\"trip_id\"], ylim=(0,100), sharey=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, ax) = plt.subplots(figsize=(12,12))\n",
+    "nRows = get_row_count(len(eval_transitions[\"ios\"].keys()), 2)\n",
+    "plot_separate_calibration_curves(ifig, nRows, eval_transitions[\"ios\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, ax) = plt.subplots(figsize=(12,12))\n",
+    "nRows = get_row_count(len(eval_transitions[\"android\"].keys()), 2)\n",
+    "plot_separate_calibration_curves(ifig, nRows, eval_transitions[\"android\"])"
    ]
   },
   {
@@ -847,6 +931,13 @@
     "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)\n",
     "evaluation_maps"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
