Remove the focus on `CURR_TRIP_ID`
The template now works for all calibration regions
Other fixes:
- use the timezone while formatting regions
- check the duration variation for each column
- move the legend outside the figure since it is so large
- plot the count variations instead of the density
- comment out density plots since they are not that meaningful en masse
- plot location points for all calibration ranges, and label the maps with their trip_id

--- a/calibration_templates/Validate_calibration.ipynb
+++ b/calibration_templates/Validate_calibration.ipynb
@@ -36,8 +36,7 @@
    "source": [
     "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
     "AUTHOR_EMAIL = \"CHANGEME\" # e.g. shankari@eecs.berkeley.edu\n",
-    "CURR_SPEC_ID = \"CHANGEME\" # e.g. sfba_trial_3\n",
-    "CURR_TRIP_ID = \"CHANGEME\" # e.g. high_accuracy_stationary\n",
+    "CURR_SPEC_ID = \"CHANGEME\" # e.g. sfba_calibration_only_1\n",
     "MAX_DURATION_VARIATION = 5 * 60 # seconds"
    ]
   },
@@ -87,6 +86,7 @@
    "outputs": [],
    "source": [
     "import folium\n",
+    "import folium.features as fof\n",
     "import folium.plugins as fpl\n",
     "import branca.element as bre"
    ]
@@ -181,7 +181,8 @@
    "source": [
     "eval_start_ts = curr_spec_wrapper[\"start_ts\"]\n",
     "eval_end_ts = curr_spec_wrapper[\"end_ts\"]\n",
-    "print(\"Evaluation ran from %s -> %s\" % (arrow.get(eval_start_ts), arrow.get(eval_end_ts)))\n",
+    "eval_tz = curr_spec[\"region\"][\"timezone\"]\n",
+    "print(\"Evaluation ran from %s -> %s\" % (arrow.get(eval_start_ts).to(eval_tz), arrow.get(eval_end_ts).to(eval_tz)))\n",
     "phone_labels = curr_spec[\"phones\"]"
    ]
   },
@@ -264,8 +265,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ios_1_transitions = eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"]\n",
-    "[(t[\"transition\"], t[\"trip_id\"], arrow.get(t[\"ts\"]).to(\"America/Los_angeles\")) for t in ios_1_transitions]"
+    "ios_1_transitions = eval_transitions[\"android\"][\"ucb-sdb-android-1\"][\"calibration_transitions\"]\n",
+    "print(\"\\n\".join([str((t[\"transition\"], t[\"trip_id\"], t[\"ts\"], arrow.get(t[\"ts\"]).to(eval_tz))) for t in ios_1_transitions]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ios_1_transitions = eval_transitions[\"android\"][\"ucb-sdb-android-2\"][\"calibration_transitions\"]\n",
+    "print(\"\\n\".join([str((t[\"transition\"], t[\"trip_id\"], t[\"ts\"], arrow.get(t[\"ts\"]).to(eval_tz))) for t in ios_1_transitions]))"
    ]
   },
   {
@@ -304,7 +315,7 @@
     "        curr_ts = arrow.get().timestamp\n",
     "        print(\"Adding range for ongoing transition\")\n",
     "        assert s[\"transition\"] == \"START_CALIBRATION_PERIOD\" or s[\"transition\"] == 0, \"Start transition has %s transition\" % s[\"transition\"]\n",
-    "        assert s[\"trip_id\"] == CURR_TRIP_ID, \"Last start transition is for %s, expected %s\" % (s[\"trip_id\"], CURR_TRIP_ID)\n",
+    "        # assert s[\"trip_id\"] == CURR_TRIP_ID, \"Last start transition is for %s, expected %s\" % (s[\"trip_id\"], CURR_TRIP_ID)\n",
     "        assert curr_ts > s[\"ts\"], \"end %s is before start %s\" % (arrow.get(e[\"ts\"]), arrow.get(s[\"ts\"]))\n",
     "        curr_range = {\"trip_id\": s[\"trip_id\"], \"start_ts\": s[\"ts\"], \"end_ts\": curr_ts, \"duration\": (curr_ts - s[\"ts\"])}\n",
     "        range_list.append(curr_range)\n",
@@ -492,15 +503,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "duration_df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -513,26 +515,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "duration_df[CURR_TRIP_ID]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "duration_variation = duration_df[CURR_TRIP_ID] - duration_df[CURR_TRIP_ID].median(); duration_variation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert duration_variation.abs().max() < MAX_DURATION_VARIATION,\\\n",
-    "    \"INVALID: duration_variation.abs().max() %d > threshold %d\" % (duration_variation.abs().max(), MAX_DURATION_VARIATION)"
+    "for col in duration_df:\n",
+    "    duration_variation = duration_df[col] - duration_df[col].median()\n",
+    "    print(\"For %s, duration_variation = %s\" % (col, duration_variation.tolist()))\n",
+    "    assert duration_variation.abs().max() < MAX_DURATION_VARIATION,\\\n",
+    "        \"INVALID: for %s, duration_variation.abs().max() %d > threshold %d\" % (col, duration_variation.abs().max(), MAX_DURATION_VARIATION)"
    ]
   },
   {
@@ -604,7 +591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_battery_df = eval_transitions[\"android\"][\"ucb-sdb-android-2\"][\"calibration_ranges\"][2][\"battery_df\"]; test_battery_df"
+    "# test_battery_df = eval_transitions[\"ios\"][\"ucb-sdb-ios-3\"][\"calibration_ranges\"][3][\"battery_df\"]; test_battery_df"
    ]
   },
   {
@@ -638,10 +625,12 @@
    },
    "outputs": [],
    "source": [
-    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(10,16))\n",
+    "(ifig, [android_ax, ios_ax]) = plt.subplots(ncols=1, nrows=2, figsize=(25,25))\n",
     "\n",
     "plot_calibration_curves(ios_ax, eval_transitions[\"ios\"])\n",
-    "plot_calibration_curves(android_ax, eval_transitions[\"android\"])"
+    "ios_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))\n",
+    "plot_calibration_curves(android_ax, eval_transitions[\"android\"])\n",
+    "android_ax.legend(loc=\"center left\", bbox_to_anchor=(1, 0.5))"
    ]
   },
   {
@@ -652,11 +641,12 @@
    "source": [
     "def plot_separate_calibration_curves(fig, nRows, phone_map):\n",
     "    for i, phone_label in enumerate(phone_map.keys()):\n",
-    "        ax = fig.add_subplot(nRows, 2, i+1)\n",
+    "        ax = fig.add_subplot(nRows, 2, i+1, title=phone_label)\n",
     "        curr_calibration_ranges = phone_map[phone_label][\"calibration_ranges\"]\n",
     "        for r in curr_calibration_ranges:\n",
     "            battery_df = r[\"battery_df\"]\n",
-    "            ret_axes = battery_df.plot(x=\"hr\", y=\"battery_level_pct\", ax=ax, label=r[\"trip_id\"], ylim=(0,100), sharey=True)"
+    "            # print(battery_df.battery_level_pct.tolist())\n",
+    "            battery_df.plot(x=\"hr\", y=\"battery_level_pct\", ax=ax, label=r[\"trip_id\"], ylim=(0,100), sharey=True)"
    ]
   },
   {
@@ -665,8 +655,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(ifig, ax) = plt.subplots(figsize=(12,12))\n",
+    "(ifig, ax) = plt.subplots(figsize=(16,16))\n",
     "nRows = get_row_count(len(eval_transitions[\"ios\"].keys()), 2)\n",
+    "print(nRows)\n",
     "plot_separate_calibration_curves(ifig, nRows, eval_transitions[\"ios\"])"
    ]
   },
@@ -676,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(ifig, ax) = plt.subplots(figsize=(12,12))\n",
+    "(ifig, ax) = plt.subplots(figsize=(16,16))\n",
     "nRows = get_row_count(len(eval_transitions[\"android\"].keys()), 2)\n",
     "plot_separate_calibration_curves(ifig, nRows, eval_transitions[\"android\"])"
    ]
@@ -752,14 +743,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_location_density_df(phone_map, sel_trip_id):\n",
+    "count_df.plot(kind=\"bar\", figsize=(16,6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_location_density_df(phone_map):\n",
     "    density_map = {}\n",
     "    for phone_label in phone_map:\n",
     "        curr_phone_density_map = {}\n",
     "        curr_calibration_ranges = phone_map[phone_label][\"calibration_ranges\"]\n",
     "        for r in curr_calibration_ranges:\n",
-    "            if r[\"trip_id\"] == sel_trip_id:\n",
-    "                density_map[phone_label] = r[\"location_df\"].hr\n",
+    "            density_map[phone_label+\"_\"+r[\"trip_id\"]] = r[\"location_df\"].hr\n",
     "        \n",
     "    density_df = pd.DataFrame(density_map)\n",
     "    return density_df"
@@ -771,8 +770,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "android_density_df = get_location_density_df(eval_transitions[\"android\"], CURR_TRIP_ID)\n",
-    "nRows = get_row_count(len(eval_transitions[\"android\"].keys()), 2)\n",
+    "android_density_df = get_location_density_df(eval_transitions[\"android\"])\n",
+    "nRows = get_row_count(len(android_density_df), 2)\n",
     "print(nRows)\n",
     "android_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)"
    ]
@@ -783,7 +782,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "android_density_df.plot(kind='density', subplots=True, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)"
+    "# android_density_df.plot(kind='density', subplots=True, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)"
    ]
   },
   {
@@ -792,7 +791,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ios_density_df = get_location_density_df(eval_transitions[\"ios\"], CURR_TRIP_ID)\n",
+    "ios_density_df = get_location_density_df(eval_transitions[\"ios\"])\n",
     "nRows = get_row_count(len(eval_transitions[\"ios\"].keys()), 2)\n",
     "print(nRows)\n",
     "ios_density_df.plot(kind='density', subplots=False, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)"
@@ -804,7 +803,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ios_density_df[\"ucb-sdb-ios-1\"].dropna()"
+    "# ios_density_df[\"ucb-sdb-ios-1\"].dropna()"
    ]
   },
   {
@@ -813,7 +812,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_loc_df = eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_ranges\"][0][\"location_df\"]; test_loc_df.head()"
+    "# test_loc_df = eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_ranges\"][0][\"location_df\"]; test_loc_df.head()"
    ]
   },
   {
@@ -822,7 +821,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_loc_df = eval_transitions[\"ios\"][\"ucb-sdb-ios-2\"][\"calibration_ranges\"][0][\"location_df\"]; test_loc_df.head()"
+    "# test_loc_df = eval_transitions[\"ios\"][\"ucb-sdb-ios-2\"][\"calibration_ranges\"][0][\"location_df\"]; test_loc_df.head()"
    ]
   },
   {
@@ -831,7 +830,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ios_density_df.plot(kind='density', subplots=True, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)"
+    "# ios_density_df.plot(kind='density', subplots=True, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)"
    ]
   },
   {
@@ -858,8 +857,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(16, 16))\n",
-    "plot_density_vs_power_curves(fig, nRows, eval_transitions[\"android\"], CURR_TRIP_ID)"
+    "# fig = plt.figure(figsize=(16, 16))\n",
+    "# plot_density_vs_power_curves(fig, nRows, eval_transitions[\"android\"], CURR_TRIP_ID)"
    ]
   },
   {
@@ -868,8 +867,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(16, 16))\n",
-    "plot_density_vs_power_curves(fig, nRows, eval_transitions[\"ios\"], CURR_TRIP_ID)"
+    "# fig = plt.figure(figsize=(16, 16))\n",
+    "# plot_density_vs_power_curves(fig, nRows, eval_transitions[\"ios\"], CURR_TRIP_ID)"
    ]
   },
   {
@@ -885,26 +884,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_map_list_for_trip(sel_trip_id):\n",
+    "def get_map_list_for_trip():\n",
     "    map_list = []\n",
     "    for phoneOS, phone_map in eval_transitions.items():\n",
     "        print(\"Processing data for %s phones\" % phoneOS)\n",
     "        for phone_label in phone_map:\n",
-    "            curr_map = folium.Map()\n",
     "            curr_calibration_ranges = phone_map[phone_label][\"calibration_ranges\"]\n",
     "            for r in curr_calibration_ranges:\n",
-    "                if r[\"trip_id\"] == sel_trip_id:\n",
+    "                    curr_map = folium.Map()\n",
+    "                # if r[\"trip_id\"] == sel_trip_id:\n",
     "                    location_df = r[\"location_df\"]\n",
     "                    latlng_route_coords = list(zip(location_df.latitude, location_df.longitude))\n",
-    "                    print(latlng_route_coords[0:10])\n",
+    "                    # print(latlng_route_coords[0:10])\n",
     "                    pl = folium.PolyLine(latlng_route_coords,\n",
     "                        popup=\"%s: %s\" % (phoneOS, phone_label))\n",
     "                    pl.add_to(curr_map)\n",
-    "#                    fpl.MarkerCluster(latlng_route_coords).add_to(curr_map)\n",
-    "#                    for i, c in enumerate(latlng_route_coords):\n",
-    "#                        folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
+    "                    curr_bounds = pl.get_bounds()\n",
+    "                    print(curr_bounds)\n",
+    "                    top_lat = curr_bounds[0][0]\n",
+    "                    mid_lng = (curr_bounds[0][1] + curr_bounds[1][1])/2\n",
+    "                    print(\"midpoint = %s, %s, plotting at %s, %s\" % (top_lat,mid_lng, top_lat, mid_lng))\n",
+    "                    folium.map.Marker([top_lat, mid_lng],\n",
+    "                                      icon=fof.DivIcon(\n",
+    "                                          icon_size=(200,36),\n",
+    "                                          html='<div style=\"font-size: 12pt; color: green;\">%s %s</div>' % (phone_label, r[\"trip_id\"]))\n",
+    "                    ).add_to(curr_map)\n",
     "                    curr_map.fit_bounds(pl.get_bounds())\n",
-    "            map_list.append(curr_map)\n",
+    "                    map_list.append(curr_map)\n",
     "    return map_list"
    ]
   },
@@ -916,7 +922,22 @@
    },
    "outputs": [],
    "source": [
-    "ha_map_list = get_map_list_for_trip(CURR_TRIP_ID)"
+    "ha_map_list = get_map_list_for_trip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "rows = get_row_count(len(ha_map_list), 2)\n",
+    "evaluation_maps = bre.Figure(ratio=\"500%\")\n",
+    "for i, curr_map in enumerate(ha_map_list):\n",
+    "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)\n",
+    "evaluation_maps"
    ]
   },
   {
@@ -924,13 +945,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rows = get_row_count(len(ha_map_list), 2)\n",
-    "evaluation_maps = bre.Figure(ratio=\"100%\")\n",
-    "for i, curr_map in enumerate(ha_map_list):\n",
-    "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)\n",
-    "evaluation_maps"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
