--- a/calibration_templates/Validate_calibration.ipynb
+++ b/calibration_templates/Validate_calibration.ipynb
@@ -287,16 +287,25 @@
    "source": [
     "# We expect that transitions occur in pairs\n",
     "def transitions_to_ranges(transition_list):\n",
-    "    # if len(transition_list) % 2 != 0:\n",
-    "    #     print(\"Transitions occur in pairs, so count (%d) cannot be odd, returning empty list\" % len(transition_list))\n",
-    "    #     return []\n",
-    "    if len(transition_list) % 2 == 0:\n",
-    "        print(\"All calibration is complete, going to the end of the list\")\n",
-    "        start_transitions = transition_list[::2]\n",
-    "    else:\n",
-    "        print(\"Ongoing calibration, ignoring last element\")\n",
-    "        start_transitions = transition_list[:-1:2]\n",
+    "    start_transitions = transition_list[::2]\n",
     "    end_transitions = transition_list[1::2]\n",
+    "    if len(transition_list) % 2 == 0:\n",
+    "        print(\"All calibration is complete, nothing to change\")\n",
+    "    else:\n",
+    "        print(\"Ongoing calibration, adding fake end transition\")\n",
+    "        last_start_transition = start_transitions[-1]\n",
+    "        fake_end_transition = copy.copy(last_start_transition)\n",
+    "        fake_end_transition[\"data\"][\"transition\"] = \"STOP_CALIBRATION_PERIOD\"\n",
+    "        curr_ts = arrow.get().timestamp\n",
+    "        fake_end_transition[\"data\"][\"ts\"] = curr_ts\n",
+    "        if \"fmt_time\" in last_start_transition[\"data\"]:\n",
+    "            fake_end_transition[\"data\"][\"fmt_time\"] = arrow.get(curr_ts).to(eval_tz)\n",
+    "        fake_end_transition[\"metadata\"][\"write_ts\"] = curr_ts\n",
+    "        if \"write_fmt_time\" in last_start_transition[\"metadata\"]:\n",
+    "            fake_end_transition[\"metadata\"][\"write_fmt_time\"] = arrow.get(curr_ts).to(eval_tz)\n",
+    "        fake_end_transition[\"metadata\"][\"platform\"] = fake\n",
+    "        del fake_end_transition[\"data\"][\"local_dt\"]\n",
+    "\n",
     "    range_list = []\n",
     "    for (s, e) in zip(start_transitions, end_transitions):\n",
     "        # print(\"------------------------------------- \\n %s -> \\n %s\" % (s, e))\n",
@@ -308,18 +317,7 @@
     "            assert s[f] == e[f], \"Field %s mismatch! %s != %s\" % (f, s[f], e[f])\n",
     "        curr_range = {\"trip_id\": s[\"trip_id\"], \"start_ts\": s[\"ts\"], \"end_ts\": e[\"ts\"], \"duration\": (e[\"ts\"] - s[\"ts\"])}\n",
     "        range_list.append(curr_range)\n",
-    "    \n",
-    "    \n",
-    "    if len(transition_list) % 2 == 1:\n",
-    "        s = transition_list[-1]\n",
-    "        curr_ts = arrow.get().timestamp\n",
-    "        print(\"Adding range for ongoing transition\")\n",
-    "        assert s[\"transition\"] == \"START_CALIBRATION_PERIOD\" or s[\"transition\"] == 0, \"Start transition has %s transition\" % s[\"transition\"]\n",
-    "        # assert s[\"trip_id\"] == CURR_TRIP_ID, \"Last start transition is for %s, expected %s\" % (s[\"trip_id\"], CURR_TRIP_ID)\n",
-    "        assert curr_ts > s[\"ts\"], \"end %s is before start %s\" % (arrow.get(e[\"ts\"]), arrow.get(s[\"ts\"]))\n",
-    "        curr_range = {\"trip_id\": s[\"trip_id\"], \"start_ts\": s[\"ts\"], \"end_ts\": curr_ts, \"duration\": (curr_ts - s[\"ts\"])}\n",
-    "        range_list.append(curr_range)\n",
-    "\n",
+    "        \n",
     "    return range_list"
    ]
   },
@@ -891,26 +889,26 @@
     "        for phone_label in phone_map:\n",
     "            curr_calibration_ranges = phone_map[phone_label][\"calibration_ranges\"]\n",
     "            for r in curr_calibration_ranges:\n",
-    "                    curr_map = folium.Map()\n",
-    "                # if r[\"trip_id\"] == sel_trip_id:\n",
-    "                    location_df = r[\"location_df\"]\n",
-    "                    latlng_route_coords = list(zip(location_df.latitude, location_df.longitude))\n",
-    "                    # print(latlng_route_coords[0:10])\n",
-    "                    pl = folium.PolyLine(latlng_route_coords,\n",
-    "                        popup=\"%s: %s\" % (phoneOS, phone_label))\n",
-    "                    pl.add_to(curr_map)\n",
-    "                    curr_bounds = pl.get_bounds()\n",
-    "                    print(curr_bounds)\n",
-    "                    top_lat = curr_bounds[0][0]\n",
-    "                    mid_lng = (curr_bounds[0][1] + curr_bounds[1][1])/2\n",
-    "                    print(\"midpoint = %s, %s, plotting at %s, %s\" % (top_lat,mid_lng, top_lat, mid_lng))\n",
-    "                    folium.map.Marker([top_lat, mid_lng],\n",
-    "                                      icon=fof.DivIcon(\n",
-    "                                          icon_size=(200,36),\n",
-    "                                          html='<div style=\"font-size: 12pt; color: green;\">%s %s</div>' % (phone_label, r[\"trip_id\"]))\n",
-    "                    ).add_to(curr_map)\n",
-    "                    curr_map.fit_bounds(pl.get_bounds())\n",
-    "                    map_list.append(curr_map)\n",
+    "                curr_map = folium.Map()\n",
+    "                location_df = r[\"location_df\"]\n",
+    "                latlng_route_coords = list(zip(location_df.latitude, location_df.longitude))\n",
+    "                # print(latlng_route_coords[0:10])\n",
+    "                pl = folium.PolyLine(latlng_route_coords,\n",
+    "                    popup=\"%s: %s\" % (phoneOS, phone_label))\n",
+    "                pl.add_to(curr_map)\n",
+    "                curr_bounds = pl.get_bounds()\n",
+    "                print(curr_bounds)\n",
+    "                top_lat = curr_bounds[0][0]\n",
+    "                mid_lng = (curr_bounds[0][1] + curr_bounds[1][1])/2\n",
+    "                print(\"midpoint = %s, %s, plotting at %s, %s\" % (top_lat,mid_lng, top_lat, mid_lng))\n",
+    "                folium.map.Marker(\n",
+    "                    [top_lat, mid_lng],\n",
+    "                    icon=fof.DivIcon(\n",
+    "                        icon_size=(200,36),\n",
+    "                        html='<div style=\"font-size: 12pt; color: green;\">%s %s</div>' % (phone_label, r[\"trip_id\"]))\n",
+    "                ).add_to(curr_map)\n",
+    "                curr_map.fit_bounds(pl.get_bounds())\n",
+    "                map_list.append(curr_map)\n",
     "    return map_list"
    ]
   },
@@ -934,39 +932,11 @@
    "outputs": [],
    "source": [
     "rows = get_row_count(len(ha_map_list), 2)\n",
-    "evaluation_maps = bre.Figure(ratio=\"500%\")\n",
+    "evaluation_maps = bre.Figure(ratio=\"{}%\".format((rows/4) * 100))\n",
     "for i, curr_map in enumerate(ha_map_list):\n",
     "    evaluation_maps.add_subplot(rows, 2, i+1).add_child(curr_map)\n",
     "evaluation_maps"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
