Minor fixes from running against real data

--- a/calibration_templates/Validate_calibration.ipynb
+++ b/calibration_templates/Validate_calibration.ipynb
@@ -293,7 +293,7 @@
     "        print(\"All calibration is complete, nothing to change\")\n",
     "    else:\n",
     "        print(\"Ongoing calibration, adding fake end transition\")\n",
-    "        last_start_transition = start_transitions[-1]\n",
+    "        last_start_transition = phone_map[phone_label][\"transitions\"][-1]\n",
     "        fake_end_transition = copy.copy(last_start_transition)\n",
     "        fake_end_transition[\"data\"][\"transition\"] = \"STOP_CALIBRATION_PERIOD\"\n",
     "        curr_ts = arrow.get().timestamp\n",
@@ -303,8 +303,9 @@
     "        fake_end_transition[\"metadata\"][\"write_ts\"] = curr_ts\n",
     "        if \"write_fmt_time\" in last_start_transition[\"metadata\"]:\n",
     "            fake_end_transition[\"metadata\"][\"write_fmt_time\"] = arrow.get(curr_ts).to(eval_tz)\n",
-    "        fake_end_transition[\"metadata\"][\"platform\"] = fake\n",
-    "        del fake_end_transition[\"data\"][\"local_dt\"]\n",
+    "        fake_end_transition[\"metadata\"][\"platform\"] = \"fake\"\n",
+    "        if \"local_dt\" in fake_end_transition[\"data\"]:\n",
+    "            del fake_end_transition[\"data\"][\"local_dt\"]\n",
     "\n",
     "    range_list = []\n",
     "    for (s, e) in zip(start_transitions, end_transitions):\n",
