--- a/calibration_templates/Validate_calibration.ipynb
+++ b/calibration_templates/Validate_calibration.ipynb
@@ -781,7 +781,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# android_density_df.plot(kind='density', subplots=True, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)"
+    "def plot_separate_density_curves(fig, nRows, phone_map):\n",
+    "    for i, phone_label in enumerate(phone_map.keys()):\n",
+    "        ax = fig.add_subplot(nRows, 2, i+1, title=phone_label)\n",
+    "        curr_calibration_ranges = phone_map[phone_label][\"calibration_ranges\"]\n",
+    "        for r in curr_calibration_ranges:\n",
+    "            location_df = r[\"location_df\"]\n",
+    "            # print(battery_df.battery_level_pct.tolist())\n",
+    "            location_df.hr.plot(kind='density', ax=ax, label=r[\"trip_id\"], sharex=True, sharey=True)\n",
+    "            ax.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(ifig, ax) = plt.subplots(nrows=0, ncols=0, figsize=(16,16))\n",
+    "nRows = get_row_count(len(eval_transitions[\"android\"].keys()), 2)\n",
+    "print(nRows)\n",
+    "plot_separate_density_curves(ifig, nRows, eval_transitions[\"android\"])"
    ]
   },
   {
@@ -802,7 +822,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ios_density_df[\"ucb-sdb-ios-1\"].dropna()"
+    "(ifig, ax) = plt.subplots(nrows=0, ncols=0, figsize=(16,16))\n",
+    "nRows = get_row_count(len(eval_transitions[\"ios\"].keys()), 2)\n",
+    "print(nRows)\n",
+    "plot_separate_density_curves(ifig, nRows, eval_transitions[\"ios\"])"
    ]
   },
   {
@@ -821,15 +844,6 @@
    "outputs": [],
    "source": [
     "# test_loc_df = eval_transitions[\"ios\"][\"ucb-sdb-ios-2\"][\"calibration_ranges\"][0][\"location_df\"]; test_loc_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ios_density_df.plot(kind='density', subplots=True, layout=(nRows, 2), figsize=(10,10), sharex=True, sharey=True)"
    ]
   },
   {
