Minor fixes to the calibration
only look at stationary calibration
set the android subplots to have no rows/cols to begin with, similar to iOS

--- a/calibration_templates/Validate_calibration.ipynb
+++ b/calibration_templates/Validate_calibration.ipynb
@@ -254,7 +254,7 @@
     "        print(\"Processing transitions for phone %s\" % phone_label)\n",
     "        curr_phone_transitions = [t[\"data\"] for t in phone_map[phone_label][\"transitions\"]]\n",
     "        # print(curr_phone_transitions)\n",
-    "        curr_calibration_transitions = [t for t in curr_phone_transitions if t[\"transition\"] in [\"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1]]\n",
+    "        curr_calibration_transitions = [t for t in curr_phone_transitions if (t[\"transition\"] in [\"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1]) and (\"stationary\" in t[\"trip_id\"])]\n",
     "        print(\"Filtered %d total -> %d calibration transitions \" % (len(curr_phone_transitions), len(curr_calibration_transitions)))\n",
     "        phone_map[phone_label][\"calibration_transitions\"] = curr_calibration_transitions"
    ]
@@ -666,7 +666,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(ifig, ax) = plt.subplots(figsize=(16,16))\n",
+    "(ifig, ax) = plt.subplots(nrows=0, ncols=0, figsize=(16,16))\n",
     "nRows = get_row_count(len(eval_transitions[\"android\"].keys()), 2)\n",
     "plot_separate_calibration_curves(ifig, nRows, eval_transitions[\"android\"])"
    ]
