Make calibration templates consistent with the evaluation template
In cases where there is overlapping functionality

--- a/calibration_templates/Validate_calibration_stationary.ipynb
+++ b/calibration_templates/Validate_calibration_stationary.ipynb
@@ -88,6 +88,7 @@
     "import folium\n",
     "import folium.features as fof\n",
     "import folium.plugins as fpl\n",
+    "import folium.utilities as ful\n",
     "import branca.element as bre"
    ]
   },
@@ -208,13 +209,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_transitions = copy.copy(phone_labels)\n",
+    "eval_transitions = copy.deepcopy(phone_labels)\n",
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Reading data for %s phones\" % phoneOS)\n",
     "    for phone_label in phone_map:\n",
     "        print(\"Loading transitions for phone %s\" % phone_label)\n",
     "        curr_phone_transitions = retrieve_data_from_server(phone_label, [\"manual/evaluation_transition\"], eval_start_ts, eval_end_ts)\n",
-    "        phone_map[phone_label] = {}\n",
+    "        curr_phone_role = phone_map[phone_label]\n",
+    "        phone_map[phone_label] = {\"role\": curr_phone_role}\n",
     "        phone_map[phone_label][\"transitions\"] = curr_phone_transitions"
    ]
   },
@@ -286,7 +288,7 @@
    "outputs": [],
    "source": [
     "# We expect that transitions occur in pairs\n",
-    "def transitions_to_ranges(transition_list):\n",
+    "def transitions_to_ranges(transition_list, start_tt, end_tt, start_ti, end_ti):\n",
     "    start_transitions = transition_list[::2]\n",
     "    end_transitions = transition_list[1::2]\n",
     "    if len(transition_list) % 2 == 0:\n",
@@ -295,7 +297,7 @@
     "        print(\"Ongoing calibration, adding fake end transition\")\n",
     "        last_start_transition = phone_map[phone_label][\"transitions\"][-1]\n",
     "        fake_end_transition = copy.copy(last_start_transition)\n",
-    "        fake_end_transition[\"data\"][\"transition\"] = \"STOP_CALIBRATION_PERIOD\"\n",
+    "        fake_end_transition[\"data\"][\"transition\"] = end_tt\n",
     "        curr_ts = arrow.get().timestamp\n",
     "        fake_end_transition[\"data\"][\"ts\"] = curr_ts\n",
     "        if \"fmt_time\" in last_start_transition[\"data\"]:\n",
@@ -310,8 +312,8 @@
     "    range_list = []\n",
     "    for (s, e) in zip(start_transitions, end_transitions):\n",
     "        # print(\"------------------------------------- \\n %s -> \\n %s\" % (s, e))\n",
-    "        assert s[\"transition\"] == \"START_CALIBRATION_PERIOD\" or s[\"transition\"] == 0, \"Start transition has %s transition\" % s[\"transition\"]\n",
-    "        assert e[\"transition\"] == \"STOP_CALIBRATION_PERIOD\" or s[\"transition\"] == 1, \"Stop transition has %s transition\" % s[\"transition\"]\n",
+    "        assert s[\"transition\"] == start_tt or s[\"transition\"] == start_ti, \"Start transition has %s transition\" % s[\"transition\"]\n",
+    "        assert e[\"transition\"] == end_tt or s[\"transition\"] == end_ti, \"Stop transition has %s transition\" % s[\"transition\"]\n",
     "        assert s[\"trip_id\"] == e[\"trip_id\"], \"trip_id mismatch! %s != %s\" % (s[\"trip_id\"], e[\"trip_id\"])\n",
     "        assert e[\"ts\"] > s[\"ts\"], \"end %s is before start %s\" % (arrow.get(e[\"ts\"]), arrow.get(s[\"ts\"]))\n",
     "        for f in [\"spec_id\", \"device_manufacturer\", \"device_model\", \"device_version\"]:\n",
@@ -328,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transitions_to_ranges(eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"])"
+    "transitions_to_ranges(eval_transitions[\"ios\"][\"ucb-sdb-ios-1\"][\"calibration_transitions\"], \"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1)"
    ]
   },
   {
@@ -340,7 +342,7 @@
     "for phoneOS, phone_map in eval_transitions.items():\n",
     "    print(\"Processing data for %s phones\" % phoneOS)\n",
     "    for phone_label in phone_map:\n",
-    "        curr_calibration_ranges = transitions_to_ranges(phone_map[phone_label][\"calibration_transitions\"])\n",
+    "        curr_calibration_ranges = transitions_to_ranges(phone_map[phone_label][\"calibration_transitions\"], \"START_CALIBRATION_PERIOD\", \"STOP_CALIBRATION_PERIOD\", 0, 1)\n",
     "        print(\"Found %d ranges for phone %s\" % (len(curr_calibration_ranges), phone_label))\n",
     "        phone_map[phone_label][\"calibration_ranges\"] = curr_calibration_ranges"
    ]
