--- a/evaluation_templates/Validate_evaluation.ipynb
+++ b/evaluation_templates/Validate_evaluation.ipynb
@@ -35,8 +35,8 @@
    "outputs": [],
    "source": [
     "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
-    "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\" # e.g. shankari@eecs.berkeley.edu\n",
-    "CURR_SPEC_ID = \"sfba_calibration_only_1\" # e.g. sfba_calibration_only_1\n",
+    "AUTHOR_EMAIL = \"CHANGEME\" # e.g. shankari@eecs.berkeley.edu\n",
+    "CURR_SPEC_ID = \"CHANGEME\" # e.g. sfba_calibration_only_1\n",
     "MAX_DURATION_VARIATION = 5 * 60 # seconds"
    ]
   },
