--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "import folium\n",
+    "import folium.features as fof\n",
     "import branca.element as bre\n",
     "import json\n",
     "import geojson as gj\n",
@@ -160,6 +161,11 @@
     "                  popup=\"Start: %s\" % trip[\"start_loc\"][\"name\"]).add_to(curr_map)\n",
     "    folium.Marker(curr_end, icon=folium.Icon(color=\"red\"),\n",
     "                  popup=\"End: %s\" % trip[\"end_loc\"][\"name\"]).add_to(curr_map)\n",
+    "    for i, wpc in enumerate(trip[\"waypoint_coords\"]):\n",
+    "        folium.map.Marker(\n",
+    "            lonlat_swap(wpc), popup=\"%d\" % i,\n",
+    "            icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
+    "\n",
     "    latlng_route_coords = [lonlat_swap(rc) for rc in trip[\"route_coords\"]]\n",
     "    folium.PolyLine(latlng_route_coords,\n",
     "                    popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
@@ -203,6 +209,13 @@
     "        if ssc[\"id\"] != compare_list[i]:\n",
     "            print(\"Mismatch in sensing configurations for %s\" % ss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
